# native-claude-client

./: .gitignore  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Makefile  README.md  SESSION-SUMMARY.md  SETUP.md  STATUS.md  prototype_cli.py  prototype_failure_tracker.py  prototype_phase2_complete.py  pyproject.toml
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  feather_request.md
docs/: architecture.md  code-style.md  event-system.md  failure-tracker-complete.md  hooks-integration.md  issue-5-completion.md  phase-2-implementation.md  roadmap.md  setup.md
erebos/: __init__.py  discovery.py  main.py
erebos/events/: __init__.py  bus.py  emitter.py  hook_executor.py  token_monitor.py
erebos/llm/: ollama_client.py
erebos/providers/: __init__.py  base.py  ollama.py
native_claude_client/events/: emitter.py  failure_tracker.py
research/: README.md
tests/events/: __init__.py  test_bus.py  test_failure_tracker.py  test_hook_executor.py  test_token_monitor.py
tests/integration/: test_failure_tracking.py
